[COMP] Champs texte : placeholder devient optionnel + correction CSS pour le curseur sur les boutons invisibles dans les input.

--- a/src/components/FORM_text-fields/main.scss
+++ b/src/components/FORM_text-fields/main.scss
@@ -79,6 +79,7 @@ body {
         color: $color-main-5;
         font-size: $font-size-medium1 * 2;
         -webkit-appearance: none;
+        cursor: text;
 
         &:hover {
             color: $color-main-7;
@@ -86,6 +87,10 @@ body {
     }
     .su-js-show .su-input-actions-area {
         opacity: 1;
+
+        .su-input-action {
+            cursor: pointer;
+        }
     }
     textarea,
     .su-textarea {
